[gd_scene load_steps=2 format=3 uid="uid://m8v9w4x5y6z7a"]

[ext_resource type="Script" path="res://scripts/achievements_screen.gd" id="1_achievements"]

[node name="AchievementsScreen" type="CanvasLayer"]
layer = 15
visible = false
script = ExtResource("1_achievements")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.8)

[node name="ScrollContainer" type="ScrollContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -350.0
offset_top = -250.0
offset_right = 350.0
offset_bottom = 250.0

[node name="PanelContainer" type="PanelContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="ScrollContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="TitleLabel" type="Label" parent="ScrollContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "ACHIEVEMENTS"
horizontal_alignment = 1

[node name="ProgressLabel" type="Label" parent="ScrollContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Unlocked: 0 / 0 (0.0%)"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="ScrollContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="AchievementsList" type="VBoxContainer" parent="ScrollContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="HSeparator2" type="HSeparator" parent="ScrollContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="CloseButton" type="Button" parent="ScrollContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Close (ESC)"

[connection signal="pressed" from="ScrollContainer/PanelContainer/MarginContainer/VBoxContainer/CloseButton" to="." method="_on_close_pressed"]
